Spring Boot`s bible ch1 Login 기능 및 view 생성

--- a/src/main/resources/templates/userinfo.html
+++ b/src/main/resources/templates/userinfo.html
@@ -2,9 +2,10 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
-	<title>YoilTeller</title>
+	<title>USERINFO</title>
 </head>
 <body>
-<h1 th:text="|${year}년|">2020년 1월 1일은 수요일</h1>
+<h1 th:text="|id=${id}|">asdf</h1>
+<h1 th:text="|pwd=${pwd}|">1234</h1>
 </body>
 </html>
