--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,6 @@
 	<title>Title</title>
 </head>
 <body>
-	<form action="http://localhost:8080/getYoil?year=2023&month=7&day=13" method="get">
-		<input name="year" type="text">년<br>
-		<input name="month" type="text">월<br>
-		<input name="day" type="text">일<br>
-		<input value="보내기" type="submit">
-	</form>
+	<a href="/login/login">LOGIN</a>
 </body>
 </html>
