--- a/src/main/resources/templates/yoil2.html
+++ b/src/main/resources/templates/yoil2.html
@@ -5,6 +5,6 @@
 	<title>YoilTeller</title>
 </head>
 <body>
-<h1 th:text="|${year}년|">2020년 1월 1일은 수요일</h1>
+<h1 th:text="|${myDate.year}년 ${myDate.month}월 ${myDate.day}일은 ${yoil}요일 입니다.|">2020년 1월 1일은 수요일</h1>
 </body>
 </html>
