--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/mainLayout}">
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
 </head>
 <body>
-	<a href="/login/login">LOGIN</a>
+<div layout:fragment="content">
+	<h1>환영합니다!</h1>
+</div>
 </body>
 </html>
